--- a/public/index.html
+++ b/public/index.html
@@ -1,43 +1,53 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
-    <meta charset="utf-8" />
-    <link rel="icon" href="%PUBLIC_URL%/favicon.ico" />
-    <meta name="viewport" content="width=device-width, initial-scale=1" />
-    <meta name="theme-color" content="#000000" />
-    <meta
-      name="description"
-      content="Web site created using create-react-app"
-    />
-    <link rel="apple-touch-icon" href="%PUBLIC_URL%/logo192.png" />
-    <!--
-      manifest.json provides metadata used when your web app is installed on a
-      user's mobile device or desktop. See https://developers.google.com/web/fundamentals/web-app-manifest/
-    -->
-    <link rel="manifest" href="%PUBLIC_URL%/manifest.json" />
-    <!--
-      Notice the use of %PUBLIC_URL% in the tags above.
-      It will be replaced with the URL of the `public` folder during the build.
-      Only files inside the `public` folder can be referenced from the HTML.
 
-      Unlike "/favicon.ico" or "favicon.ico", "%PUBLIC_URL%/favicon.ico" will
-      work correctly both with client-side routing and a non-root public URL.
-      Learn how to configure a non-root public URL by running `npm run build`.
-    -->
-    <title>React App</title>
-  </head>
-  <body>
-    <noscript>You need to enable JavaScript to run this app.</noscript>
-    <div id="root"></div>
-    <!--
-      This HTML file is a template.
-      If you open it directly in the browser, you will see an empty page.
+<head>
+  <!-- Character encoding for the HTML document -->
+  <meta charset="utf-8" />
 
-      You can add webfonts, meta tags, or analytics to this file.
-      The build step will place the bundled scripts into the <body> tag.
+  <!-- Ensure proper display and touch zooming on all devices -->
+  <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1.5, minimum-scale=0.5, user-scalable=yes" />
 
-      To begin the development, run `npm start` or `yarn start`.
-      To create a production bundle, use `npm run build` or `yarn build`.
-    -->
-  </body>
+  <!-- Primary icon displayed in browser tab -->
+  <link rel="icon" href="%PUBLIC_URL%/images/favicon.ico" />
+
+  <!-- Theme color for browsers and mobile devices -->
+  <meta name="theme-color" content="#000000" />
+
+  <!-- Meta description for SEO (update this to describe your site accurately) -->
+  <meta name="description" content="Prabin K C's portfolio showcasing full-stack development, DevOps, and software engineering skills." />
+
+  <!-- Open Graph meta tags for better social media integration -->
+  <meta property="og:title" content="Prabin K C - Full Stack Developer and DevOps Specialist" />
+  <meta property="og:description" content="A portfolio site showcasing projects, skills, and expertise in full-stack development, DevOps, and more." />
+  <meta property="og:image" content="%PUBLIC_URL%/images/portfolio-preview.png" /> <!-- Replace with the actual path to your preview image -->
+  <meta property="og:url" content="https://prabinkc2046.github.io/portfolio" />
+  <meta property="og:type" content="website" />
+
+  <!-- Icon for Apple devices -->
+  <link rel="apple-touch-icon" href="%PUBLIC_URL%/images/apple-touch-icon.png" />
+
+  <!-- Web app manifest for progressive web apps -->
+  <link rel="manifest" href="%PUBLIC_URL%/site.webmanifest" />
+
+  <!-- Additional icons for different devices -->
+  <link rel="icon" type="image/png" sizes="32x32" href="%PUBLIC_URL%/images/favicon-32x32.png" />
+  <link rel="icon" type="image/png" sizes="16x16" href="%PUBLIC_URL%/images/favicon-16x16.png" />
+  <link rel="icon" type="image/png" sizes="192x192" href="%PUBLIC_URL%/images/android-chrome-192x192.png" />
+  <link rel="icon" type="image/png" sizes="512x512" href="%PUBLIC_URL%/images/android-chrome-512x512.png" />
+
+  <!-- Title of the web page (important for SEO and accessibility) -->
+  <title>Prabin K C - Full Stack Developer & DevOps Specialist</title>
+</head>
+
+<body>
+  <!-- Message for users with JavaScript disabled -->
+  <noscript>You need to enable JavaScript to run this app.</noscript>
+
+  <!-- React app mount point -->
+  <div id="root"></div>
+
+  <!-- You can add web fonts, meta tags, or analytics to this file. -->
+</body>
+
 </html>
