--- a/index.html
+++ b/index.html
@@ -1,15 +1,15 @@
 <!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.5,minimum-scale=0.5,user-scalable=yes"/><link rel="icon" href="/portfolio/images/favicon.ico"/><meta name="theme-color" content="#000000"/><meta name="description" content="Prabin K C's portfolio showcasing full-stack development, DevOps, and software engineering skills."/><meta property="og:title" content="Prabin K C - Full Stack Developer and DevOps Specialist"/><meta property="og:description" content="A portfolio site showcasing projects, skills, and expertise in full-stack development, DevOps, and more."/><meta property="og:image" content="/portfolio/images/portfolio-preview.png"/><meta property="og:url" content="https://prabinkc2046.github.io/portfolio"/><meta property="og:type" content="website"/><link rel="apple-touch-icon" href="/portfolio/images/apple-touch-icon.png"/><link rel="manifest" href="/portfolio/site.webmanifest"/><link rel="icon" type="image/png" sizes="32x32" href="/portfolio/images/favicon-32x32.png"/><link rel="icon" type="image/png" sizes="16x16" href="/portfolio/images/favicon-16x16.png"/><link rel="icon" type="image/png" sizes="192x192" href="/portfolio/images/android-chrome-192x192.png"/><link rel="icon" type="image/png" sizes="512x512" href="/portfolio/images/android-chrome-512x512.png"/><title>Prabin K C - Full Stack Developer & DevOps Specialist</title><script type="application/ld+json">{
         "@context": "https://schema.org",
         "@type": "LocalBusiness",
-        "name": "Brisbane Web Solutions Australia",
+        "name": "KC Web Solutions Australia",
         "description": "Your trusted partner for web development, AI integration, and SEO solutions across Australia, with a strong base in Brisbane.",
         "url": "https://prabinkc2046.github.io/portfolio/",
         "address": {
           "@type": "PostalAddress",
-          "streetAddress": "123 Digital Drive",
-          "addressLocality": "Brisbane",
+          "streetAddress": "53 Binnalong Street",
+          "addressLocality": "Rochedale South",
           "addressRegion": "QLD",
-          "postalCode": "4000",
+          "postalCode": "4123",
           "addressCountry": "AU"
         },
         "geo": {
