--- a/index.html
+++ b/index.html
@@ -1,63 +1,18 @@
 <!doctype html><html lang="en"><head><meta charset="utf-8"/><meta name="viewport" content="width=device-width,initial-scale=1,maximum-scale=1.5,minimum-scale=0.5,user-scalable=yes"/><link rel="icon" href="/portfolio/images/favicon.ico"/><meta name="theme-color" content="#000000"/><meta name="description" content="Prabin K C's portfolio showcasing full-stack development, DevOps, and software engineering skills."/><meta property="og:title" content="Prabin K C - Full Stack Developer and DevOps Specialist"/><meta property="og:description" content="A portfolio site showcasing projects, skills, and expertise in full-stack development, DevOps, and more."/><meta property="og:image" content="/portfolio/images/portfolio-preview.png"/><meta property="og:url" content="https://prabinkc2046.github.io/portfolio"/><meta property="og:type" content="website"/><link rel="apple-touch-icon" href="/portfolio/images/apple-touch-icon.png"/><link rel="manifest" href="/portfolio/site.webmanifest"/><link rel="icon" type="image/png" sizes="32x32" href="/portfolio/images/favicon-32x32.png"/><link rel="icon" type="image/png" sizes="16x16" href="/portfolio/images/favicon-16x16.png"/><link rel="icon" type="image/png" sizes="192x192" href="/portfolio/images/android-chrome-192x192.png"/><link rel="icon" type="image/png" sizes="512x512" href="/portfolio/images/android-chrome-512x512.png"/><title>Prabin K C - Full Stack Developer & DevOps Specialist</title><script type="application/ld+json">{
         "@context": "https://schema.org",
-        "@type": "LocalBusiness",
-        "name": "KC Web Solutions Australia",
-        "description": "Your trusted partner for web development, AI integration, and SEO solutions across Australia, with a strong base in Brisbane.",
-        "url": "https://prabinkc2046.github.io/portfolio/",
-        "address": {
-          "@type": "PostalAddress",
-          "streetAddress": "53 Binnalong Street",
-          "addressLocality": "Rochedale South",
-          "addressRegion": "QLD",
-          "postalCode": "4123",
-          "addressCountry": "AU"
-        },
-        "geo": {
-          "@type": "GeoCoordinates",
-          "latitude": -27.4698,
-          "longitude": 153.0251
-        },
-        "telephone": "0473654956",
-        "priceRange": "$$$",
-        "openingHours": "Mo-Fr 09:00-18:00",
-        "sameAs": [
-          "https://www.linkedin.com/in/experiencedfullstackdeveoperprabinkc/"
-        ],
-        "areaServed": {
-          "@type": "Country",
-          "name": "Australia"
-        },
-        "services": [
+        "@type": "BreadcrumbList",
+        "itemListElement": [
           {
-            "@type": "Service",
-            "name": "Web Development",
-            "description": "Custom, scalable, and responsive web solutions for businesses across Australia."
+            "@type": "ListItem",
+            "position": 1,
+            "name": "Portfolio",
+            "item": "https://prabinkc2046.github.io/portfolio/"
           },
           {
-            "@type": "Service",
-            "name": "AI Integration",
-            "description": "Enhance your website's functionality with cutting-edge AI technologies like chatbots, recommendation systems, and automated workflows."
-          },
-          {
-            "@type": "Service",
-            "name": "SEO Optimization",
-            "description": "Drive traffic and improve search engine rankings with targeted SEO strategies."
-          },
-          {
-            "@type": "Service",
-            "name": "Web Design",
-            "description": "User-centric and visually compelling designs tailored to your business."
-          },
-          {
-            "@type": "Service",
-            "name": "E-commerce Solutions",
-            "description": "Comprehensive e-commerce platforms with advanced features like AI-powered product recommendations."
-          },
-          {
-            "@type": "Service",
-            "name": "Cloud Integration",
-            "description": "Seamless cloud-based solutions to ensure your website is always available and scalable."
+            "@type": "ListItem",
+            "position": 2,
+            "name": "Chat",
+            "item": "https://prabinkc2046.github.io/portfolio/#chat"
           }
-        ],
-        "keywords": "Web Development, AI Integration, SEO, Web Design, E-commerce, Cloud Integration, Brisbane, Australia"
+        ]
       }</script><script defer="defer" src="/portfolio/static/js/main.e4a80efe.js"></script><link href="/portfolio/static/css/main.423b9387.css" rel="stylesheet"></head><body><noscript>You need to enable JavaScript to run this app.</noscript><div id="root"></div></body></html>
